fix and add draw modal

--- a/src/index.html
+++ b/src/index.html
@@ -44,6 +44,12 @@
         Выиграли нолики!<br>Поздравляем с победой!
       </p>
     </div>
+
+    <div class="game__win game__draw">
+      <p class="game__win-text">
+        Ничья!<br>Сыграем еще!
+      </p>
+    </div>
   </main>
 
     <script type="text/javascript" src="scripts/main.js"></script>
