--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="images/tic-tac-toe.png">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.css">
     <title>Tic Tac Toe game</title>
   </head>
+
   <body>
   <main class="game">
     <div class="game__wrapper">
@@ -41,6 +43,12 @@
     <div class="game__win game__circle-win">
       <p class="game__win-text game__circle-win-text">
         Выиграли нолики!<br>Поздравляем с победой!
+      </p>
+    </div>
+
+    <div class="game__win game__draw">
+      <p class="game__win-text">
+        Ничья!<br>Сыграем еще!
       </p>
     </div>
   </main>
