--- a/index.html
+++ b/index.html
@@ -10,48 +10,7 @@
   </head>
 
   <body>
-  <main class="game">
-    <div class="game__wrapper">
-      <div class="game__row">
-        <span class="game__cell"></span>
-        <span class="game__cell"></span>
-        <span class="game__cell"></span>
-      </div>
-
-      <div class="game__row">
-        <span class="game__cell"></span>
-        <span class="game__cell"></span>
-        <span class="game__cell"></span>
-      </div>
-
-      <div class="game__row">
-        <span class="game__cell"></span>
-        <span class="game__cell"></span>
-        <span class="game__cell"></span>
-      </div>
-    </div>
-    <button class="game__button">Restart</button>
-
-    <div class="modal"></div>
-
-    <div class="game__win game__cross-win">
-      <p class="game__win-text game__cross-win-text">
-        Выиграли крестики!<br>Поздравляем с победой!
-      </p>
-    </div>
-
-    <div class="game__win game__circle-win">
-      <p class="game__win-text game__circle-win-text">
-        Выиграли нолики!<br>Поздравляем с победой!
-      </p>
-    </div>
-
-    <div class="game__win game__draw">
-      <p class="game__win-text">
-        Ничья!<br>Сыграем еще!
-      </p>
-    </div>
-  </main>
+  <main class="game"></main>
 
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
